finished schematics and placing components on PCB

--- a/Instrumentational_Amplifier/PCB/Instrumentational_Amplifier.html
+++ b/Instrumentational_Amplifier/PCB/Instrumentational_Amplifier.html
@@ -36,17 +36,17 @@
       <tr class="front_matter">
         <td class="front_matter_column1">Date</td>
         <td class="front_matter_column2">:</td>
-        <td class="front_matter_column3">10/24/2024</td>
+        <td class="front_matter_column3">10/26/2024</td>
       </tr>
       <tr class="front_matter">
         <td class="front_matter_column1">Time</td>
         <td class="front_matter_column2">:</td>
-        <td class="front_matter_column3">5:59:40 PM</td>
+        <td class="front_matter_column3">8:38:03 AM</td>
       </tr>
       <tr class="front_matter">
         <td class="front_matter_column1">Filename</td>
         <td class="front_matter_column2">:</td>
-        <td class="front_matter_column3">C:\Users\herat\OneDrive - University of Moratuwa\Desktop\Instrumentation\Instrumentational_Amplifier\Instrumentational_Amplifier.PrjPcb</td>
+        <td class="front_matter_column3">D:\projects\github\instrumentation\Instrumentational_Amplifier\PCB\Instrumentational_Amplifier.PrjPcb</td>
       </tr>
     </table>
     <br>
